<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.LoginActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_welcome_back"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="170dp"
        android:id="@+id/welcomeTv"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/welcomeTv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/login_sign_in"
        android:id="@+id/singInTv"
        android:layout_marginTop="10dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="305dp"
        android:layout_height="60dp"
        android:id="@+id/usernameTil"
        app:layout_constraintStart_toStartOf="parent"
        app:boxCornerRadiusBottomEnd="15dp"
        app:boxCornerRadiusBottomStart="15dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        app:boxStrokeColor="@null"
        app:boxCornerRadiusTopEnd="15dp"
        app:boxCornerRadiusTopStart="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/singInTv"
        android:layout_marginTop="50dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:id="@+id/usernameEt"
            android:maxLength="15"
            android:hint="Username"
            android:layout_height="match_parent"/>
    </com.google.android.material.textfield.TextInputLayout>

    <EditText
        android:layout_width="305dp"
        android:layout_height="60dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        android:hint="Password"
        android:padding="16dp"
        android:background="@drawable/edit_text_background"
        android:singleLine="true"
        android:id="@+id/passwordTil"
        android:maxLines="1"
        android:inputType="textPassword"
        android:maxLength="128"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/usernameTil"
        android:layout_marginTop="20dp"/>

    <TextView
        android:id="@+id/passwordErrorTv"
        android:layout_width="305dp"
        android:layout_height="wrap_content"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:text="Cannot log in with the given credentials"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="12sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="@+id/passwordTil"
        app:layout_constraintStart_toStartOf="@+id/passwordTil"
        app:layout_constraintTop_toBottomOf="@id/passwordTil" />


<!--    <TextView-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        app:layout_constraintEnd_toEndOf="@id/passwordTil"-->
<!--        app:layout_constraintTop_toBottomOf="@id/passwordTil"-->
<!--        android:id="@+id/forgotPasswordTv"-->
<!--        android:textColor="@color/textColorSecondary"-->
<!--        android:textSize="12sp"-->
<!--        android:layout_marginTop="10dp"-->
<!--        android:text="@string/login_forgot_password"/>-->

    <com.google.android.material.button.MaterialButton
        android:layout_width="305dp"
        android:layout_height="65dp"
        app:layout_constraintTop_toBottomOf="@id/passwordTil"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:cornerRadius="12dp"
        android:id="@+id/signInBtn"
        android:text="@string/login_sign_in_button"
        android:textColor="@color/textColorPrimary"
        android:layout_marginTop="54dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signInBtn"
        android:text="- or sign in with -"
        android:layout_marginTop="20dp"
        android:textSize="14sp"
        android:textColor="@color/textColorSecondary"/>

    <ImageView
        android:layout_width="145dp"
        android:layout_height="53dp"
        android:src="@drawable/ic_logingoogle"
        android:padding="15dp"
        android:clickable="true"
        android:focusable="true"
        android:background="@drawable/button_background"
        app:layout_constraintStart_toStartOf="@id/usernameTil"
        app:layout_constraintTop_toBottomOf="@id/signInBtn"
        android:layout_marginTop="56dp"
        android:id="@+id/googleLoginBtn"/>

    <ImageView
        android:layout_width="145dp"
        android:layout_height="53dp"
        android:src="@drawable/ic_loginfacebook"
        android:padding="15dp"
        android:clickable="true"
        android:focusable="true"
        android:background="@drawable/button_background"
        app:layout_constraintTop_toBottomOf="@id/signInBtn"
        app:layout_constraintEnd_toEndOf="@id/usernameTil"
        android:layout_marginTop="56dp"
        android:id="@+id/facebookLoginBtn"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:orientation="horizontal"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/googleLoginBtn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:text="@string/login_no_account"
            android:textColor="@color/textColorSecondary"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:textStyle="bold"
            android:textSize="14sp"
            android:clickable="true"
            android:focusable="true"
            android:id="@+id/signUpBtn"
            android:textColor="@color/colorPrimary"
            android:text="@string/login_sign_up"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>